moved back to devcontainer

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,13 +1,15 @@
-# docker-compose.yml
+# .devcontainer/docker-compose.yml
 version: '3.8'
 
 services:
   apache-php:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:80"
     volumes:
-      - .:/var/www/html
+      - ..:/var/www/html
     depends_on:
       - mysql
     environment:
