--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,15 +1,18 @@
 # .devcontainer/Dockerfile
-FROM mcr.microsoft.com/devcontainers/php:0-8.2
+FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
-# Keep the container running
-CMD ["apache2-foreground"]
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends \
+        apache2 \
+        php \
+        libapache2-mod-php \
+        php-mysql \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/*
 
-# .devcontainer/devcontainer.json
-{
-    "name": "PHP & MySQL Dev Environment",
-    "dockerComposeFile": "docker-compose.yml",
-    "service": "apache-php",
-    "workspaceFolder": "/var/www/html",
-    "forwardPorts": [8080, 8081, 3306],
-    "remoteUser": "root"
-}
+RUN a2enmod rewrite
+RUN a2enmod headers
+
+COPY apache-config.conf /etc/apache2/sites-available/000-default.conf
+
+EXPOSE 80
