--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,21 +1,36 @@
-# .devcontainer/Dockerfile
+# 1. Start with the dev container base (same as before)
 FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends \
-        apache2 \
-        php \
-        libapache2-mod-php \
-        php-mysql \
-    && apt-get clean -y \
+# 2. Disable interactive prompts and update
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && apt-get -y install --no-install-recommends \
+    vim \
+    tmux \
+    apache2 \
+    libapache2-mod-php \
+    php \
+    php-cli \
+    php-mysql \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-RUN a2enmod rewrite
-RUN a2enmod headers
+# 3. Copy your .vimrc and tmux.conf into the container
+COPY .vimrc /home/vscode/.vimrc
+COPY tmux.conf /home/vscode/.tmux.conf
 
-COPY apache-config.conf /etc/apache2/sites-available/000-default.conf
+# 4. Make sure /home/vscode is owned by the vscode user
+RUN chown -R vscode:vscode /home/vscode
 
+# 5. Enable any mods you need in Apache
+RUN a2enmod rewrite \
+ && a2enmod headers
+
+# 6. (Optional) Copy your custom Apache config if you want 
+#    the DocumentRoot set to /workspaces, etc.
+# COPY apache-config.conf /etc/apache2/sites-available/000-default.conf
+
+# 7. Expose port 80 for Apache
 EXPOSE 80
 
-# Add a default CMD to start Apache if you want
+# 8. Start Apache in the foreground
 CMD ["apache2ctl", "-D", "FOREGROUND"]
