--- a/.devcontainer/apache-config.conf
+++ b/.devcontainer/apache-config.conf
@@ -1,9 +1,9 @@
-# .devcontainer/apache-config.conf
 <VirtualHost *:80>
-    DocumentRoot /workspaces/${localWorkspaceFolderBasename}
-    
-    <Directory /workspaces/${localWorkspaceFolderBasename}>
-        Options Indexes FollowSymLinks
+    ServerAdmin webmaster@localhost
+    DocumentRoot /workspace
+
+    # Enable .htaccess overrides if you want local rewrites
+    <Directory /workspace>
         AllowOverride All
         Require all granted
     </Directory>
