--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,29 @@
+// .devcontainer/devcontainer.json
 {
   "name": "LAMP Dev Environment",
-  // The main service defined in docker-compose.yml that VS Code should connect to
-  "service": "php-apache",
-
-  // Points to the docker-compose file
+  // Points to the multi-container Docker setup.
   "dockerComposeFile": "docker-compose.yml",
 
-  // Where VS Code should open your workspace
+  // Name of the service you want VS Code (Codespaces) to attach to by default.
+  "service": "php-apache",
+
+  // The folder VS Code should open by default in the container.
   "workspaceFolder": "/workspace",
 
-  // Add any VS Code extensions you want preinstalled
+  // Add any VS Code extensions you want pre-installed.
   "extensions": [
     "ms-azuretools.vscode-docker",
     "eamodio.gitlens",
     "xdebug.php-debug"
   ],
 
-  // Ensures your user has sudo in the container.
+  // Default user in container (created in the Dockerfile).
   "remoteUser": "vscode",
-  
-  // (Optional) Forward extra ports if needed. 
-  "forwardPorts": [8080, 3306, 8081]
+
+  // Forward any ports you need in Codespaces:
+  "forwardPorts": [8080, 3306, 8081],
+
+  // (Optional) Run commands after container is created. Here, we just echo a reminder.
+  // You can do something like composer install, or auto-run :PlugInstall if you prefer.
+  "postCreateCommand": "echo 'Container ready! Run \"vim\" and then :PlugInstall if you want to install Vim plugins.'"
 }
