--- a/.devcontainer/apache-config.conf
+++ b/.devcontainer/apache-config.conf
@@ -1,8 +1,8 @@
+# .devcontainer/apache-config.conf
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     DocumentRoot /workspace
 
-    # Enable .htaccess overrides if you want local rewrites
     <Directory /workspace>
         AllowOverride All
         Require all granted
